# app

./: AGENT.md  CHANGELOG.md  README.md
.github/workflows/: README.md  backend.yml  docs.yml  frontend.yml  validate.yml
PS1/: dev_down.ps1  dev_up.ps1  guards.ps1  migrate.ps1  seed.ps1  smoke.ps1  test_backend.ps1  test_frontend.ps1  validate.ps1
api/: INDEX.md
backend/: README.md  pyproject.toml
backend/app/: health.py  main.py  settings.py
backend/app/api/: __init__.py  routes.py
backend/app/domain/: __init__.py
backend/app/infra/: __init__.py  database.py
backend/app/infra/repositories/: __init__.py  base.py
backend/app/services/: __init__.py  placeholder_service.py
backend/tests/: __init__.py  test_app_startup.py  test_health.py  test_infra_database.py  test_placeholder.py
docs/: INDEX.md
docs/agents/: README.md
docs/api/: INDEX.md
docs/architecture/: INDEX.md
docs/audits/: implementation_readiness.md  implementation_readiness_phase1.md  phase1_audit.md  phase1_gap_map.md
docs/decisions/: decision_phase1_lifecycle_authority.md  phase1_decisions_lock_001.md  phase1_freeze_1.0.0.md
docs/ops/: INDEX.md
docs/releases/: phase1_freeze_1.0.0.md
docs/roadmap/: INDEX.md
docs/specs/: INDEX.md
docs/ux/: INDEX.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/api/: client.ts  (+1 more)
ops/: INDEX.md
roadmap/: INDEX.md
roadmap/phase-0/: INDEX.md  step-000.md
scripts/: README.md
specs/: INDEX.md
tools/guards/: README.md
ux/: INDEX.md
(+36 files in other folders)
