[project]
name = "planning-backend"
version = "0.0.1"
description = "Bootstrap backend skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.29",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=7.4.0",
]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]
addopts = "-q"

